fixed css on firefox

--- a/packages/components/media-player/src/PlayerControls/index.module.scss
+++ b/packages/components/media-player/src/PlayerControls/index.module.scss
@@ -13,7 +13,7 @@
 }
 
 .playerButton {
-  width: 53px;
+  width: 55px;
   height: 48px;
   padding: 0.5em;
   border: 0;
